--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -6,6 +6,7 @@ on:
 
 jobs:
   build_wine:
+    environment: cachix
     runs-on: macos-15
     permissions:
       contents: read
@@ -13,5 +14,9 @@ jobs:
       - uses: actions/checkout@v4
       - uses: cachix/install-nix-action@v31
         with:
-          github_access_token: ${{ secrets.GITHUB_TOKEN }}
+          nix_path: nixpkgs=channel:nixos-unstable
+      - uses: cachix/cachix-action@v14
+        with:
+          name: saro-wine
+          authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
       - run: nix build
